feat: added dymanic attribute

--- a/src/index.html
+++ b/src/index.html
@@ -47,4 +47,10 @@
       </div>
     </div>
   </body>
+  <script>
+    let elements = document.querySelectorAll(".product");
+    for (el of elements) {
+      el.setAttribute("data-price", "span");
+    }
+  </script>
 </html>
